--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<style type="text/css">
-    <h1>hello world</h1>
-</style>
 
-<title>Register</title>
+
+<title>First Commit</title>
 </head>
 <body>
+    <h1>hello world</h1>
 </body>
 </html>
