--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>hello world</h1>
-    <a href="https://sam05dz.github.io/ihm/">Devoir IHM - Covid</>
+    <a href="https://sam05dz.github.io/ihm/">Devoir IHM - Covid</a>
 </body>
 </html>
