--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
-<title>First Commit</title>
+<title>Welcome Home Sam</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <h1>Devoir :</h1>
     <a href="https://sam05dz.github.io/devoir-ihm/">Devoir IHM - Covid</a>
 </body>
 </html>
