--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 .img-card img{
   width: 100%;
   height: 250px;
-  object-fit:scale-down;
+  object-fit:cover;
   transition: all .25s ease;
 }
 .card-content {
