--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@ Essentielles Contre le Coronavirus.
         <div class="col-xs-12 col-sm-4">
             <div class="card">
                 <a class="img-card" href="devoir-ihm/">
-                    <img src="img/map.png" />
+                    <img src="img/live.png" />
                 </a>
                 <br />
                 <div class="card-content">
                     <h4 class="card-title">
                         <a href="devoir-ihm/">
-                            Live Update
+                            Suivi des Cas
                         </a>
                     </h4>
                     <div class="">
