--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">A propos..</h4>
-          <p class="text-muted">Devoir du Module IHM , qui présente une visualisation des cas de covid en algérie depuis jansvier 20200.</p>
+          <p class="text-muted">Devoir du Module IHM , qui présente une visualisation des cas de covid en algérie depuis janvier 2020. Houssam Hamouda</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Contact</h4>
@@ -188,7 +188,7 @@ Essentielles Contre le Coronavirus.
     <p class="float-right">
       <a href="#">retour</a>
     </p>
-    <p>Devoir IHM &copy; ISIL L3 - Université Batna 2 - Ben Boulaid- Fesdis</p>
+    <p>Devoir IHM &copy; houssam Hamouda 2021 - ISIL L3 - Université Batna 2 - Ben Boulaid- Fesdis</p>
     
   </div>
 </footer>
