--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>IHM - Covid ISIL L3</title>
-
-      
-
     <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -112,7 +109,7 @@
                 <br />
                 <div class="card-content">
                     <h4 class="card-title">
-                        <a href="#carouselExample>
+                        <a href="#>
                             Info sur le Covid
                         </a>
                     </h4>
@@ -162,7 +159,7 @@ Essentielles Contre le Coronavirus.
                 <div class="card-content">
                     <h4 class="card-title">
                         <a href="#">
-                            Live Update
+                            Infos générales
                         </a>
                     </h4>
                     <div class="">
@@ -171,7 +168,7 @@ Essentielles Contre le Coronavirus.
                 </div>
                 <div class="card-read-more">
                     <a class="btn btn-link btn-block" href="#">
-                        Visualiser..
+                        Lire..
                     </a>
                 </div>
             </div>
