--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>IHM - Covid ISIL L3</title>
+
+      
+
     <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -72,12 +75,12 @@
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">A propos..</h4>
-          <p class="text-muted">Devoir du Module IHM , qui présente une visualisation des cas de covid en algérie depuis janvier 2020. Houssam Hamouda</p>
+          <p class="text-muted">Devoir du Module IHM , qui présente une visualisation des cas de covid en algérie depuis janvier 2020. Houssam Hamouda.</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Contact</h4>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Email me</a></li>
+            <li><a href="houssam.hamouda@gmail.com" class="text-white">Email me</a></li>
           </ul>
         </div>
       </div>
@@ -97,8 +100,6 @@
   </div>
 </header>
 
-
-
    <div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-4">
@@ -109,7 +110,7 @@
                 <br />
                 <div class="card-content">
                     <h4 class="card-title">
-                        <a href="#>
+                        <a href="#">
                             Info sur le Covid
                         </a>
                     </h4>
@@ -143,7 +144,7 @@ Essentielles Contre le Coronavirus.
                     </div>
                 </div>
                 <div class="card-read-more">
-                    <a class="btn btn-link btn-block" href="devoir-ihm/">
+                    <a class="btn btn-link btn-block" href="#">
                         Visualiser..
                     </a>
                 </div>
@@ -159,7 +160,7 @@ Essentielles Contre le Coronavirus.
                 <div class="card-content">
                     <h4 class="card-title">
                         <a href="#">
-                            Infos générales
+                            Live Update
                         </a>
                     </h4>
                     <div class="">
@@ -174,7 +175,7 @@ Essentielles Contre le Coronavirus.
             </div>
         </div>
     </div>
-</div>
+
 
 
 
