--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Essentielles Contre le Coronavirus.
                     </div>
                 </div>
                 <div class="card-read-more">
-                    <a class="btn btn-link btn-block" href="#">
+                    <a class="btn btn-link btn-block" href="devoir-ihm/">
                         Visualiser..
                     </a>
                 </div>
