--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Contact</h4>
           <ul class="list-unstyled">
-            <li><a href="houssam.hamouda@gmail.com" class="text-white">Email me</a></li>
+            <li><a href="mailto:houssam.hamouda@gmail.com" class="text-white">Email me</a></li>
           </ul>
         </div>
       </div>
