--- a/devoir-ihm/index.html
+++ b/devoir-ihm/index.html
@@ -44,6 +44,8 @@
     <script src="js/app.js"></script>
   </head>
   <body>
+    <button type="button" class="btn btn-labeled btn-default">
+                <span class="btn-label"><i class="glyphicon glyphicon-chevron-left"></i></span>Left</button>
     <div class="flexbox">
       
       <div id="list">
