--- a/devoir-ihm/index.html
+++ b/devoir-ihm/index.html
@@ -8,6 +8,9 @@
     <title>isiL IHM - COVID-19</title>
     <link rel = "icon" href = "css/icon.svg" 
         type = "image/x-icon"> 
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <!--<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>-->
 
     <!-- amCharts includes -->
     <script src="api/core.js"></script>
@@ -39,6 +42,11 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" media="all" href="css/dark.css" />
+    <style>
+    .btn-label {position: relative;left: -12px;display: inline-block;padding: 6px 12px;background: rgba(0,0,0,0.15);border-radius: 3px 0 0 3px;}
+.btn-labeled {padding-top: 0;padding-bottom: 0;}
+.btn { margin-bottom:10px; }
+    </style>
   
     <!-- Main app -->
     <script src="js/app.js"></script>
