--- a/devoir-ihm/index.html
+++ b/devoir-ihm/index.html
@@ -74,11 +74,11 @@
   <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container d-flex justify-content-between">
       <a href="http://sam05dz.github.io" class="navbar-brand d-flex align-items-center">
-        <img src="devoir-ihm/css/icon.svg" alt="Covid-19" width="50" height="50">
+        <img src="css/icon.svg" alt="Covid-19" width="50" height="50">
         <strong>IHM - COVID</strong>
       </a>
        <button type="button" class="btn btn-labeled btn-default">
-                <span class="btn-label"><i class="glyphicon glyphicon-chevron-left"></i></span>back</button>
+              
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
