--- a/devoir-ihm/index.html
+++ b/devoir-ihm/index.html
@@ -56,9 +56,9 @@
     <header>
     <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container d-flex justify-content-between">
-      <a href="http://sam05dz.github.io" class="navbar-brand d-flex align-items-center">
+      <a href="javascript:history.back()" class="navbar-brand d-flex align-items-center">
         <img src="css/icon.svg" alt="Covid-19" width="50" height="50">
-        <strong>IHM - COVID</strong>
+        <strong>Retour vers principale</strong>
       </a>
        </div>
   </div>
