--- a/devoir-ihm/index.html
+++ b/devoir-ihm/index.html
@@ -48,7 +48,7 @@
   </head>
   <body>
     
-     <div class="navbar navbar-dark bg-dark shadow-sm">
+     <div class="navbar navbar-dark bg-dark shadow-sm py-1">
     <div class="container d-flex justify-content-between">
       <a href="javascript:history.back()" class="navbar-brand d-flex align-items-center">
         <img src="css/icon.svg" alt="Covid-19" width="50" height="50">
