--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="row">
         <div class="col-xs-12 col-sm-4">
             <div class="card">
-                <a class="img-card" href="#">
+                <a class="img-card" href="https://www.who.int/fr/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub/q-a-detail/coronavirus-disease-covid-19#:~:text=symptomes">
                     <img src="img/consigne.jpg" />
                 </a>
                 <br />
@@ -120,7 +120,7 @@ Essentielles Contre le Coronavirus.
                     </div>
                 </div>
                 <div class="card-read-more">
-                    <a class="btn btn-link btn-block" href="#">
+                    <a class="btn btn-link btn-block" href="https://www.who.int/fr/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub/q-a-detail/coronavirus-disease-covid-19#:~:text=symptomes">
                         en savoir plus..
                     </a>
                 </div>
