--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     </h4>
                     <div class="">
                         Découvrez les Mesures de Protection
-Essentielles Contre le Coronavirus.
+Essentielles Contre le Coronavirus.(depuis le site OMS)
                     </div>
                 </div>
                 <div class="card-read-more">
@@ -154,17 +154,17 @@ Essentielles Contre le Coronavirus.
         <div class="col-xs-12 col-sm-4">
             <div class="card">
                 <a class="img-card" href="#">
-                    <img src="img/map.png" />
+                    <img src="#" />
                 </a>
                 <br />
                 <div class="card-content">
                     <h4 class="card-title">
                         <a href="#">
-                            Live Update
+                            a propos 
                         </a>
                     </h4>
                     <div class="">
-                        La carte de l'épidémie de Covid-19 en Algérie, depuis janvier 2020
+                        A propos du module IHM
                     </div>
                 </div>
                 <div class="card-read-more">
