--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ Essentielles Contre le Coronavirus.(depuis le site OMS)
         <div class="col-xs-12 col-sm-4">
             <div class="card">
                 <a class="img-card" href="#">
-                    <img src="#" />
+                    <img src="img/ihm.jpg" />
                 </a>
                 <br />
                 <div class="card-content">
