--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
                         </a>
                     </h4>
                     <div class="">
-                        Découvrez les Mesures de Protection
-Essentielles Contre le Coronavirus.(depuis le site OMS)
+                        Découvrez les Mesures de Protection selon l'OMS
                     </div>
                 </div>
                 <div class="card-read-more">
