--- a/dzcovid/index.html
+++ b/dzcovid/index.html
@@ -182,7 +182,7 @@
 
 <footer class="text-muted">
   <div class="container">
-    <p>Devoir IHM &copy; houssam Hamouda 2021 - ISIL L3 - Université Batna 2 - Ben Boulaid- Fesdis</p>
+    <p>PFE &copy; houssam Hamouda 2021 - ISIL L3 - Université Batna 2 - Ben Boulaid- Fesdis</p>
     
   </div>
 </footer>
