--- a/dzcovid/pfe/index.html
+++ b/dzcovid/pfe/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Suivi des statistiques des personnes atteint du COVID-19 pour les 48 wilayas.">
-    <meta name="keywords" content="Devoir IHM - ISIL L3 2020/2021 ">
+    <meta name="keywords" content="PFE- ISIL L3 2020/2021 ">
     <meta name="author" content="Houssam HAMOUDA">
     <title>isiL IHM - COVID-19</title>
     <link rel = "icon" href = "css/icon.svg" 
