--- a/steganos/index.html
+++ b/steganos/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="fr">
 <head>
 <meta charset="utf-8"/>
 <title>HouSs@m Steganography</title>
@@ -11,7 +11,7 @@ Vous pouvez Cacher un texte dans un texte ou bien un fichier dans un texte.<br /
 
 </div>
 <hr style="width: 100%;" />
-<h2>Text in Text Steganography </h2>
+<h2>Texte in Texte Steganography </h2>
 <table style="width: 100%;">
 <tr>
 <td style="width: 45%; vertical-align: top;">
