--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="legal">
 			<div class="info">
 				<div class="copyright"><span>© 2021 Houssam HAMOUDA</span> All Rights Reserved.<br>Any trademarks or logos used on this site are property of their respective owners.</div>
-				<div class="terms"><a href="https://sam05dz.github.io/legal/terms">Terms of Service</a><a href="https://sam05dz.github.io/legal/privacy">Privacy Policy</a><a href="https://sam05dz.github.io/legal/cookies">Cookies Policy</a></div>
+				<div class="terms"><a href="https://houham.netlify.app/legal/terms">Terms of Service</a><a href="https://houham.netlify.app/legal/privacy">Privacy Policy</a><a href="https://houham.netlify.app/legal/cookies">Cookies Policy</a></div>
 			</div>
 		</div>
 	</footer>
