--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title id="title">Rechercher</title>
 
 	<link rel="stylesheet" href="css/style.css" type="text/css">
-	<link rel="icon" href="https://assets.zorincdn.com/images/favicon.ico">
+	<link rel="icon" href="https://cdn.iconscout.com/icon/free/png-256/free-hacker-7-71228.png">
 	<link href="css/inter.css" rel="stylesheet" type="text/css">
 
 	<script src="js/jquery-1.4.2.min.js"></script>
