--- a/aadl/index.html
+++ b/aadl/index.html
@@ -10,7 +10,18 @@
 		<meta http-equiv="X-Frame-Options " content="deny">
 		
 		
-		
+		<div style="
+        background-color: red;
+        color: white;
+        text-align: center;
+        padding: 10px;
+        font-size: 18px;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1000;">
+        Ce site est pour tester un script
+    </div>
 		<form name="INSCRIPTION_DESKTOP" action="#" target="_self" onsubmit="#" method="post">
 			<div class="h-0">
 				
