--- a/aadl/index.html
+++ b/aadl/index.html
@@ -215,6 +215,18 @@
 																													<span style="font-size: 2.1875rem;" class="">عدل</span>
 																													<span style="font-size: 2.1875rem;" class="">AADL</span>
 																												</span>
+																												<div style="
+        background-color: red;
+        color: white;
+        text-align: center;
+        padding: 10px;
+        font-size: 18px;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1000;">
+        Ce site est pour tester un script
+    </div>
 																												<span style="font-size: 2.3125rem;" class="">3</span>
 																												<link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
 																											</td>
