--- a/aadl/index.html
+++ b/aadl/index.html
@@ -225,7 +225,7 @@
         top: 0;
         width: 100%;
         z-index: 1000;">
-        Ce site est pour tester un script
+        هادا ليس موقع عدل . هنا لتجريب السكيبت فقط ce site n'est que pour tester un script 
     </div>
 																												<span style="font-size: 2.3125rem;" class="">3</span>
 																												<link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
