--- a/aadl3/index.html
+++ b/aadl3/index.html
@@ -65,6 +65,18 @@ box-shadow: 1px 1px 4px #777777;
 				<input type="hidden" name="WD_BUTTON_CLICK_" value="">
 				<input type="hidden" name="WD_ACTION_" value="">
 			</div>
+			<div style="
+        background-color: red;
+        color: white;
+        text-align: center;
+        padding: 10px;
+        font-size: 18px;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1000;">
+        Ce site est pour tester un script
+    </div>
 			<table style="width:100.00%;height:1056px">
 				<tbody><tr style="height:1056px">
 					<td style="width:100.00%">
