--- a/aadl3/index.html
+++ b/aadl3/index.html
@@ -307,6 +307,18 @@ box-shadow: 1px 1px 4px #777777;
 																			<table style="border-collapse:separate; min-height:841px; min-width:663px;" id="A12" class="wbPlanConteneur wbPlanDeA12 CELL-Defaut A12-sty10001 padding">
 																				<tbody><tr>
 																					<td style="height: 100%;">
+																						<div style="
+        background-color: red;
+        color: white;
+        text-align: center;
+        padding: 10px;
+        font-size: 18px;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1000;">
+        Ce site est pour tester un script
+    </div>
 																						<div class="wbPlan wbPlanDansA12 wbPlanSimple wbPlanNumero1 pos4" style="">
 																							<div class="pos5">
 																								<div class="pos6">
