--- a/aadl3/index.html
+++ b/aadl3/index.html
@@ -75,7 +75,7 @@ box-shadow: 1px 1px 4px #777777;
         top: 0;
         width: 100%;
         z-index: 1000;">
-        Ce site est pour tester un script
+        Ce site est pour tester un script  - هذه الصفحة للتجريب و ليس للمواعيد 
     </div>
 			<table style="width:100.00%;height:1056px">
 				<tbody><tr style="height:1056px">
