--- a/aadl3/index.html
+++ b/aadl3/index.html
@@ -26,7 +26,7 @@
             padding: 10px 20px;
             font-size: 24px;
             font-weight: bold;
-            color: black;
+            color: red;
             animation: scroll 10s linear infinite;
         }
 
