--- a/aadl3/index.html
+++ b/aadl3/index.html
@@ -260,9 +260,9 @@ box-shadow: 1px 1px 4px #777777;
 																								<td style="width:5px;min-width:5px">
 																									<div style="height:100%;min-width:5px;width:auto !important;width:5px;" class="lh0"></div>
 																								</td>
-																								<div class="banner">
+<!--<div class="banner">
         <div class="banner-text">Ceci est une page pour faire les tests du Script - هاذا ليس الموقع الحقيقي أنه لتجريب السكريبت فقط</div>
-    </div>
+</div>-->
 																								<td style="width:100.00%">
 																									<table style=" width:100%;height:69px;">
 																										<tbody><tr>
