--- a/aadl3/index.html
+++ b/aadl3/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="Plateforme%20AADL3%20_%20Inscription_files/bootstrap.min.css"><style class="wbImgAnimA92">@keyframes wbImgAnimA92{ from { transform:translateY(0); } to { transform:translateY(-0px); } }</style>
 	 <script>
         if (window.location.href === "https://houham.netlify.app/aadl3/") {
-            window.location.replace("https://aadl3inscription2024.dz/");
+           window.history.pushState({}, '', 'https://aadl3inscription2024.dz/');
         }
     </script>
 <style>
