--- a/aadl3/aadl.html
+++ b/aadl3/aadl.html
@@ -941,7 +941,7 @@ box-shadow: 1px 1px 4px #777777;
 																								</div>
 																								<div class="pos39">
 																									<div class="pos40">
-																										<input type="hidden" name="A91[]" value="">
+																										<input type="hidden" name="A91[]" value="0">
 																										<table id="tzA91" class="Normal A91 wbSelecteurInterrupteur">
 																											<tr style="vertical-align:middle">
 																												<td style="vertical-align:middle;height:30px;width:93px;">
