--- a/aadl3/aadl.html
+++ b/aadl3/aadl.html
@@ -355,9 +355,9 @@ box-shadow: 1px 1px 4px #777777;
 																										<table style=" width:477px;border-spacing:0;height:75px;border-collapse:separate;border:0;background:none;outline:none;" id="bzA14">
 																											<tr>
 																												<td style="border:none;box-shadow:none;" id="tzA14" class="valignmiddle">
-																													<button type="button" onclick="clWDUtil.pfGetTraitement('A14',0,void 0)(event); " id="A14" class="BTN-Defaut wblien bbox padding effet Bootstrapclass-riche" style="display:block;width:100%;height:auto;min-height:75px;width:auto;min-width:477px;width:477px\9;height:auto;min-height:75px;" tabindex="3">
-																														<span style="font-size: 1.3125rem; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; text-transform: none; text-wrap: wrap; font-weight: bold; font-family: Cairo, sans-serif;" class="">إنشاء حساب جديد  - الإكتتاب</span>
-																													</button>
+																													<button type="button" onclick="window.location.href='index.html';" id="A14" class="BTN-Defaut wblien bbox padding effet Bootstrapclass-riche" style="display:block;width:100%;height:auto;min-height:75px;width:auto;min-width:477px;width:477px\9;height:auto;min-height:75px;" tabindex="3">
+    <span style="font-size: 1.3125rem; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; text-transform: none; text-wrap: wrap; font-weight: bold; font-family: Cairo, sans-serif;" class="">إنشاء حساب جديد  - الإكتتاب</span>
+</button>
 																												</td>
 																											</tr>
 																										</table>
