--- a/aadl3/index.html
+++ b/aadl3/index.html
@@ -1256,7 +1256,7 @@ box-shadow: 1px 1px 4px #777777;
 																							</div>
 																							<div class="pos48">
 																								<div class="pos49">
-																									<button type="button" onclick="clWDUtil.pfGetTraitement('A55',0,void 0)(event); " id="A55" class="l-9 wbstyle wblien bbox padding effet Bootstrapclass-riche" style="width:100%;height:auto;min-height:59px;width:100%;height:auto;min-height:59px;display:inline-block;" tabindex="-1">التحقق من صحة المعلومات</button>
+																									<button type="button" href="res/Plateforme AADL3 _ Inscription.html" id="A55" class="l-9 wbstyle wblien bbox padding effet Bootstrapclass-riche" style="width:100%;height:auto;min-height:59px;width:100%;height:auto;min-height:59px;display:inline-block;" tabindex="-1">التحقق من صحة المعلومات</button>
 																								</div>
 																							</div>
 																						</div>
